// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add custom className 1`] = `
<DeferredSpinner
  className="foo"
  timeout={100}
>
  <i
    className="spinner foo"
  />
</DeferredSpinner>
`;

exports[`is controlled by loading prop 1`] = `
<DeferredSpinner
  loading={false}
  timeout={100}
>
  <div>
    foo
  </div>
</DeferredSpinner>
`;

exports[`is controlled by loading prop 2`] = `
<DeferredSpinner
  loading={true}
  timeout={100}
>
  <div>
    foo
  </div>
</DeferredSpinner>
`;

exports[`is controlled by loading prop 3`] = `
<DeferredSpinner
  loading={true}
  timeout={100}
>
  <i
    className="spinner"
  />
</DeferredSpinner>
`;

exports[`is controlled by loading prop 4`] = `
<DeferredSpinner
  loading={false}
  timeout={100}
>
  <div>
    foo
  </div>
</DeferredSpinner>
`;

exports[`renders children before timeout 1`] = `
<DeferredSpinner
  timeout={100}
>
  <div>
    foo
  </div>
</DeferredSpinner>
`;

exports[`renders children before timeout 2`] = `
<DeferredSpinner
  timeout={100}
>
  <i
    className="spinner"
  />
</DeferredSpinner>
`;

exports[`renders spinner after timeout 1`] = `
<DeferredSpinner
  timeout={100}
/>
`;

exports[`renders spinner after timeout 2`] = `
<DeferredSpinner
  timeout={100}
>
  <i
    className="spinner"
  />
</DeferredSpinner>
`;
